--- a/resources/sass/elements/_links.scss
+++ b/resources/sass/elements/_links.scss
@@ -720,6 +720,12 @@
 .switch_wrap {
     position: relative;
 
+    .hover_text {
+        @media all and (max-width: 768px) {
+            display: none;
+        }
+    }
+
     &:hover {
 
         .hover_text {
